Added one custom price to db